# aitown

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  _config.yml  building.html  config.h.in  contributors.html  documentation.html  index.html  license.html  references.html  releases.html
_layouts/: common.html  default.html  post.html
_posts/: 2013-09-10-welcome-to-aitown.markdown  2013-09-20-software-for-virtual-world-rendering-delta3d.markdown  2013-09-20-software-for-virtual-world-rendering-g3d.markdown  2013-09-20-software-for-virtual-world-rendering-horde3d.markdown  2013-09-20-software-for-virtual-world-rendering-ioquake3.markdown  2013-09-20-software-for-virtual-world-rendering-ogre.markdown  2013-09-20-software-for-virtual-world-rendering-other.markdown  2013-09-20-software-for-virtual-world-rendering-planeshift.markdown  2013-09-20-software-for-virtual-world-rendering-unity3d.markdown  2013-09-20-software-for-virtual-world-rendering.markdown
aitown-cfg/: CMakeLists.txt  ReadMe.md  aitown-cfg-config.h.in  aitown-cfg-leaf.c  aitown-cfg-leaf.h  aitown-cfg-node.c  aitown-cfg-node.h  aitown-cfg-sect.c  aitown-cfg-sect.h  aitown-cfg.c  aitown-cfg.h
aitown-client/: CMakeLists.txt  ReadMe.md  aiclient_data.c  aiclient_data.h  globals.h  main.c  main.cc
aitown-compress/: CMakeLists.txt  README.md  ReadMe.md  aitown-compress-driver.c  aitown-compress-driver.h  aitown-compress-mng.c  aitown-compress-mng.h  aitown-compress.c  aitown-compress.h
aitown-core/: CMakeLists.txt  ReadMe.md  actuator.c  actuator.h  actuator_mng.c  actuator_mng.h  aitown-core.c  aitown-core.h  aitown_global.h  brain.c  brain.h  core_func.h  dummy.cc  iobase-old.c  iobase-old.h  iobase.h  iobase_mng.c  iobase_mng.h  sensor.c  sensor.h  sensor_mng.c  sensor_mng.h
aitown-core/protobuf/: CMakeLists.txt  aitown_messages.pb-c.c  aitown_messages.pb-c.h  aitown_messages.proto  protobuf_wrapper.c  protobuf_wrapper.h
aitown-db/: CMakeLists.txt  ReadMe.md  aitown-db-close.c  aitown-db-close.h  aitown-db-driver.c  aitown-db-driver.h  aitown-db-free.c  aitown-db-free.h  aitown-db-mng.c  aitown-db-mng.h  aitown-db-open.c  aitown-db-open.h  aitown-db-read.c  aitown-db-read.h  aitown-db-write.c  aitown-db-write.h  aitown-db.c  aitown-db.h
aitown-db/buildin/: kyoto.c  kyoto.h  mysql-local.h  mysql.c  tokyo.c  tokyo.h
aitown-dejavu/: CMakeLists.txt  ReadMe.md  aitown-dejavu-config.h.in  aitown-dejavu.c  aitown-dejavu.h  dejavu-ar.c  dejavu-ar.h  dejavu-change.c  dejavu-change.h  dejavu-level-I-mng.c  dejavu-level-I-mng.h  dejavu-level-I.c  dejavu-level-I.h  dejavu-level-II-mng.c  dejavu-level-II-mng.h  dejavu-level-II.c  dejavu-level-II.h
aitown-dstorage/: CMakeLists.txt  ReadMe.md  aitown-dstorage-controller.c  aitown-dstorage-controller.h  aitown-dstorage-ctrl-mng.c  aitown-dstorage-ctrl-mng.h  aitown-dstorage-ctrl.c  aitown-dstorage-ctrl.h  aitown-dstorage-data.c  aitown-dstorage-data.h  aitown-dstorage-defs.h  aitown-dstorage-h-mng.c  aitown-dstorage-h-mng.h  aitown-dstorage-handle.c  aitown-dstorage-handle.h  aitown-dstorage-lku.c  aitown-dstorage-lku.h  aitown-dstorage.c  aitown-dstorage.h  dstorage_cdata.c  dstorage_cdata.h  dstorage_chunk.c  dstorage_chunk.h  dstorage_chunk_mng.c  dstorage_chunk_mng.h  dstorage_clist.c  dstorage_clist.h  dstorage_controllers.c  dstorage_controllers.h  dstorage_ctrl.c  dstorage_ctrl.h  dstorage_func.h  dstorage_handle.c  dstorage_handle.h  dstorage_handle_mng.c  dstorage_handle_mng.h  dstorage_id.h  dstorage_lookup.c  dstorage_lookup.h
aitown-dstorage/controllers/: dstorage_ctrl_local_db.c  dstorage_ctrl_local_db.h  dstorage_ctrl_local_dir.c  dstorage_ctrl_local_dir.h
aitown-image/: CMakeLists.txt  ReadMe.md  aitown-image.c  aitown-image.h  image_greyscale.c  image_greyscale.h  image_rgba.c  image_rgba.h
aitown-index/: CMakeLists.txt  ReadMe.md  globals.h  index_data.c  index_data.h  main.c  server_data.c  server_data.h
aitown-plugin/: CMakeLists.txt  ReadMe.md  plugin_data.c  plugin_data.h  plugin_definition.h  plugin_manager.c  plugin_manager.h  plugin_manager_inf.c  plugin_posix.h  plugin_sign.c  plugin_sign.h  plugin_win.h
aitown-plugin/sample-plugin/: CMakeLists.txt  sample-plugin.c  sample-plugin.h
aitown-server/: CMakeLists.txt  ReadMe.md  aiserver_data.c  aiserver_data.h  globals.h  main.c
aitown-utils/: CMakeLists.txt  ReadMe.md  accumulator.c  accumulator.h  char_buff.c  char_buff.h  dbg_assert.h  dir_iterator.c  dir_iterator.h  dir_utils.c  dir_utils.h  error_codes.h  linked_list_str.c  linked_list_str.h  pivotal_gmtime.c  pivotal_gmtime.h  pointer_aritmetic.h  stack_buff.h  utils.c  utils.h  utils_null.h  utils_offset.h  utils_posix.h  utils_unused.h  utils_version.h  utils_win.h  zmq_wrapper.h
cfgpath/: CMakeLists.txt  ReadMe.md  cfgpath.c  cfgpath.h
css/: main.css
inih/: CMakeLists.txt  ReadMe.md  ini.h  struct_ini.c  struct_ini.h
kdtree/: CMakeLists.txt  ReadMe.md  aitown-kdtree.h  kdtree.c  kdtree.h
kdtree/.svn/: wc.db
kdtree/examples/: CMakeLists.txt  test.c  test2.c
reference/: aitown-cfg.html  aitown-client.html  aitown-compress.html  aitown-core.html  aitown-db.html  aitown-dejavu.html  aitown-dstorage.html  aitown-image.html  aitown-index.html  aitown-plugin.html  aitown-server.html  aitown-utils.html  (+1 more)
sglib/: CMakeLists.txt  README  ReadMe.md  sglib.h
tests/unit/: CMakeLists.txt  config-builder.c  config-builder.h  getRealTime.c
tests/unit/aitown-cfg/: CMakeLists.txt  aitown_cfg_test.cc
tests/unit/aitown-core/: CMakeLists.txt  core_test.cc
tests/unit/aitown-db/: CMakeLists.txt  aitown_db_test.cc
tests/unit/aitown-dejavu/: CMakeLists.txt  aitown_dejavu_image_test.c  aitown_dejavu_test.cc  test_image.h  test_image_16x16.h  test_image_16x32.h  test_image_22x16.h
tests/unit/aitown-dstorage/: CMakeLists.txt  dstorage_test.cc
tests/unit/aitown-plugin/: CMakeLists.txt  plugin_test.cc
tests/unit/aitown-utils/: CMakeLists.txt  char_buff_test.cc  diriterator_test.cc  dirutils_test.cc
tests/unit/inih/: CMakeLists.txt  inih_test.cc
tests/unit/kdtree/: CMakeLists.txt  kdtree_test.cc
(+15 files in other folders)
